made the website nicer, still some fixing to do (horizontal scrolling problem)

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,9 +1,16 @@
 html, body {
   height: 100%;
 }
+
 body {
-  padding-top:50px;
-} 
+  background: url(../background.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  padding-top:60px;
+}
+
 #searchbar {
   margin-top: 30px;
   margin-bottom: 30px;
@@ -19,12 +26,17 @@ body {
 }
 
 .container {
-  width: auto;
-  min-height:100%;
-  background-color:#faf5f0;
   overflow:hidden;
 }
 
 .dropdown:hover .dropdown-menu {
   display: block;
+}
+
+.content{
+  width: 70%;
+  left: 50%;
+  margin-left: 15%;
+  min-height:100%;
+  background-color: white;
 }
